--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.5",
     "@sentry/browser": "^5.20.1",
-    "axios": "^0.27.2",
     "@types/react": "^16.8.6 || ^17.0.0",
+    "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
     "controller": "^1.0.0",
@@ -24,6 +24,7 @@
     "debug": "^4.3.2",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "html-react-parser": "^3.0.4",
     "html2canvas": "^1.0.0-rc.5",
     "i18next": "^20.2.2",
     "import-webflow-export": "^0.0.4",
@@ -35,6 +36,7 @@
     "main": "^1000.0.1",
     "main.js": "0.0.1",
     "morgan": "^1.10.0",
+    "next": "^12.3.1",
     "notistack": "^2.0.5",
     "papaparse": "^5.3.0",
     "parcel-bundler": "1.12.5",
@@ -50,16 +52,14 @@
     "vega-embed": "^6.13.0",
     "vega-lite": "^4.17.0",
     "xlsx": "^0.17.0",
-    "xss": "^1.0.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "xss": "^1.0.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-react": "^7.18.6",
     "@babel/preset-env": "^7.14.0",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/cypress": "^7.0.0",
     "@testing-library/dom": "^7.27.0",
     "@testing-library/jest-dom": "^5.11.6",
@@ -78,8 +78,8 @@
     "miragejs": "^0.1.41",
     "nodemon": "^2.0.16",
     "parcel-bundler": "1.12.5",
-    "sass": "^1.52.3",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "sass": "^1.52.3"
   },
   "scripts": {
     "watch": "parcel watch src/index.html src/layouts/main.html",
@@ -135,14 +135,14 @@
   },
   "importWebflowExport": {
     "copyTrees": {
-      "css": "src/css",
-      "js": "src/js",
-      "images": "src/images"
+      "css": "public/css",
+      "js": "public/js",
+      "images": "public/images"
     },
     "importHtml": [
       {
         "glob": "index.html",
-        "destDir": "src",
+        "destDir": "pages",
         "transforms": "./src/js/webflow/import.js"
       }
     ]
