Added unit test for choropleth legend formatting

--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
       ".data.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(leaflet|leaflet.markercluster)/)"
+      "node_modules/(?!(leaflet|leaflet.markercluster|d3-format)/)"
     ],
     "moduleFileExtensions": [
       "js",
