--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.5",
     "@sentry/browser": "^5.20.1",
-    "axios": "^0.27.2",
     "@types/react": "^16.8.6 || ^17.0.0",
+    "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
     "controller": "^1.0.0",
@@ -49,23 +49,22 @@
     "vega": "^5.17.0",
     "vega-embed": "^6.13.0",
     "vega-lite": "^4.17.0",
+    "vercel": "^28.8.0",
     "xlsx": "^0.17.0",
-    "xss": "^1.0.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "xss": "^1.0.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-react": "^7.18.6",
     "@babel/preset-env": "^7.14.0",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/cypress": "^7.0.0",
     "@testing-library/dom": "^7.27.0",
     "@testing-library/jest-dom": "^5.11.6",
     "babel-jest": "^26.3.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
-    "canvas": "^2.9.3",
+    "canvas": "^2.10.2",
     "chrome-remote-interface": "^0.31.0",
     "concurrently": "^7.2.1",
     "cssnano": "^4.1.10",
@@ -78,8 +77,8 @@
     "miragejs": "^0.1.41",
     "nodemon": "^2.0.16",
     "parcel-bundler": "1.12.5",
-    "sass": "^1.52.3",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "sass": "^1.52.3"
   },
   "scripts": {
     "watch": "parcel watch src/index.html src/layouts/main.html",
