--- a/.github/workflows/e2e_pr.yml
+++ b/.github/workflows/e2e_pr.yml
@@ -15,15 +15,15 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - uses: SFDigitalServices/wait-for-deployment-action@v1
-        id: deployment
+      - uses: aaimio/vercel-preview-url-action@ead2d57
+        id: vercel_preview_url
         with:
-          environment: Preview
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: echo "Deployed to: ${{ steps.deployment.outputs.url }}"
+      - run: echo 'Deployed to: ${{ steps.vercel_preview_url.outputs.vercel_preview_url }}'
 
       - name: Set url
-        run: echo "CYPRESS_BASE_URL=${{ steps.deployment.outputs.url }}" >> $GITHUB_ENV
+        run: echo 'CYPRESS_BASE_URL=${{ steps.vercel_preview_url.outputs.vercel_preview_url }}' >> $GITHUB_ENV
 
       - name: wait for netlify review app
         uses: nev7n/wait_for_response@v1
